# restful-badger

./: .gitignore  .~lock.battery_rundown.ods#  CMakeLists.txt  README.md  battery_rundown.csv  battery_rundown.ods  pico_sdk_import.cmake  pimoroni_pico_import.cmake  tiles.json  tiles_example.json
3d/: enclosure-bottom.FCStd  enclosure-bottom.stl  enclosure-top.FCStd  enclosure-top.stl
config/: tiles.json
src/: CMakeLists.txt  badger.c  badger.cpp  badger.h  http.c  http.h  http_tcp.c  http_tcp.h  images.h  lwipopts.h  ntp.c  ntp.h  power.c  power.h  restful.c  restful.h  tcp.c  tcp.h  tiles.c  tiles.h
src/modules/: CMakeLists.txt  http.c  images.h  ntp.c  ntp.h  piezo.c  piezo.h  power.c  power.h  restful.c  restful.h  tiles.c  tiles.h
tools/: .convert.py.swp  bin_to_uint8_t.py  bulb_64x64.png.bak  convert.py  json_to_c_array.py
tools/fakentp/: Dockerfile  README.md  chrony.conf
